# h5xx

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  INSTALL.md  LICENSE  NOTES  README.md  TODO  h5xx.doxyfile  h5xx.doxygen  h5xx_build.sh
H5xx/: util.hpp
cmake/: FindH5XX.cmake  FindHDF5.cmake  platform.cmake
example/: CMakeLists.txt  attribute.cpp  dataset.cpp  dataset_multiarray.cpp  example.cpp  example.h5  hyperslab.cpp  slice.cpp  slice_array.cpp  slice_mpi.cpp  slice_multiarray.cpp  slice_python.cpp  slice_slice.cpp  slice_std_vector.cpp
example/cmake/: FindH5XX.bak
h5xx/: attribute.hpp  chunked_dataset.hpp  ctype.hpp  dataset.hpp  dataspace.hpp  datatype.hpp  error.hpp  exception.hpp  file.hpp  group.hpp  h5xx.hpp  hdf5_compat.hpp  hyperslab.hpp  iterator.hpp  policy.hpp  property.hpp  slice.hpp  utility.hpp
h5xx/attribute/: attribute.hpp  boost_array.hpp  boost_multi_array.hpp  scalar.hpp  std_vector.hpp  utility.hpp
h5xx/dataset/: boost_array.hpp  boost_multi_array.hpp  dataset.hpp  scalar.hpp  std_vector.hpp  utility.hpp
h5xx/dataspace/: boost_array.hpp  boost_multi_array.hpp  dataspace.hpp  std_vector.hpp
h5xx/datatype/: datatype.hpp
h5xx/policy/: filter.hpp  policy.hpp  storage.hpp  string.hpp
test/: CMakeLists.txt  attribute.cpp  catch_boost_no_throw.hpp  chunked_dataset.cpp  ctest_full_output.hpp  dataset.cpp  dataset_big.cpp  dataset_big_mpi.cpp  dataspace.cpp  file.cpp  fixture.hpp  group.cpp  h5xx.cpp  iterator.cpp
tmp/: EMAIL  TODO  UNTANGLE
